syntax = "proto3";
option go_package="./;proto";
package proto;

// define service
/*
  Using Server stream mod, because server is used to get docker and nvml info
*/
service GcsInfoCatchServiceDocker {
  // 定义docker操作方法
  //包括了image pull以及container create
  rpc DockerContainerRun(ContainerRunRequestMsg) returns (stream ContainerRunRespondMsg) {}

  rpc DockerContainerDelete (DeleteRequestMsg) returns (stream DeleteRespondMsg) {}
  rpc DockerContainerStatus (StatusRequestMsg) returns (stream StatusRespondMsg) {}
  rpc DockerContainerLogs (LogsRequestMsg) returns (stream LogsRespondMsg) {}

  rpc DockerLogStor(DockerLogStorReqMsg) returns (DockerLogStorRespMsg) {}


  // 定义nvml操作方法
  rpc NvmlUtilizationRate (NvmlInfoReuqestMsg) returns (stream NvmlInfoRespondMsg) {}
}

/***************************Docker Message******************************/

message DockerLogStorReqMsg {
  string logFilePath = 1;
  string containerName = 2;
}
message DockerLogStorRespMsg {
  string logStorResp = 1;
}

message ContainerRunRequestMsg {
  string imageName = 1;
  string containerName = 2;
  string gpuIdx = 3;
  bool master = 4;
  string paramaters = 5;
}

message ContainerRunRespondMsg {
  string runResp = 1;
  string containerIp = 2;
}
message DeleteRequestMsg{
  string containName = 1;
}
message DeleteRespondMsg{
  string deleteResp = 1;
}

message StatusRequestMsg{
  string containerName = 1;
}
message StatusRespondMsg{
  string statusResp = 1;
}

message LogsRequestMsg{
  string containerName = 1;
}
message LogsRespondMsg{
  string logsResp = 1;
}
/***************************Docker Message******************************/

/***************************NVML Message******************************/
message NvmlInfoReuqestMsg{
  string indexID = 1;
}
message NvmlInfoRespondMsg{
  repeated int32 indexID = 1;
  repeated uint32 utilizationRate = 2;
  repeated uint32 memRate = 3;
  repeated uint32 temperature = 4;
  repeated uint32 occupied = 5; //通过 runningprocess 有无来进行判断
}
/***************************NVML Message******************************/